# VWSLang

./: .gitignore  CMakeLists.txt  Dockerfile
src/: CMakeLists.txt  VWSL.y  VWSLang.h  vwsl_ast.h  vwsl_main.cpp
test/: test.vwsl
